<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search_btn">Search</string>
    <string name="media_btn">Media library</string>
    <string name="settings">Settings</string>
    <string name="dark_theme">Dark theme</string>
    <string name="share_the_app">Share the app</string>
    <string name="write_to_support">Write to support</string>
    <string name="user_agreement">User agreement</string>
    <string name="share_link" translatable="false">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="support_msg">Thanks to the developers and developers for the cool app!</string>
    <string name="support_subject">"Message to the developers and developers of the Playlist Maker app"</string>
    <string name="support_email">kk.lolock@ya.ru</string>
    <string name="offer_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="duration_placeholder">0:00</string>
    <string name="api_base_url" translatable="false">https://itunes.apple.com</string>
    <string name="refresh">Refresh</string>
    <string name="nothing_was_found">Nothing was found</string>
    <string name="error_text">Connection problems \n\n The download failed. Check your internet connection.</string>
    <string name="clear_history">Clear history</string>
    <string name="you_were_looking_for">You were looking for</string>
    <string name="duration">Duration</string>
    <string name="album">Album</string>
    <string name="year">Year</string>
    <string name="genre">Genre</string>
    <string name="country">Country</string>
    <string name="time_placeholder">0:00</string>
    <string name="media_library">Media library</string>
    <string name="new_playlist">New playlist</string>
    <string name="no_playlists">You haven\'t created any playlists</string>
    <string name="favourite_tracks">Favourite tracks</string>
    <string name="playlists">Playlists</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="playlist_name">Playlist name</string>
    <string name="playlist_size">Playlist size</string>
    <string name="description">Description</string>
    <string name="name">Name*</string>
    <string name="playlist_name_allert">Fill in the playlist name!</string>
    <string name="finish_creating_playlist">Finish creating a playlist?</string>
    <string name="all_unsaved_data_will">All unsaved data will be lost</string>
    <string name="cancel">Cancel</string>
    <string name="complete">Complete</string>
    <string name="share">Share</string>
    <string name="edit_playlist_info">Edit playlist info</string>
    <string name="delete_playlist">Delete playlist</string>
    <string name="track_successfully_deleted_from_playlist">Track successfully deleted from playlist</string>
    <string name="there_is_no_track_list_to_share_in_this_playlist">There is no track list to share in this playlist.</string>
    <string name="edit_playlist">Edit playlist</string>
    <string name="save">Save</string>
    <string name="no_tracks_have_been_added_to_this_playlist_yet">No tracks have been added to this playlist yet</string>
    <string name="create">Create</string>

</resources>