<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="4dp"
        android:paddingStart="4dp">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="@dimen/main_text_size" />


    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:paddingStart="@dimen/common_padding">

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="21dp"
            android:text="@string/dark_theme"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_text_size" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:paddingStart="@dimen/common_padding"
        android:paddingEnd="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="21dp"
            android:text="@string/share_the_app"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_text_size" />

        <ImageView
            android:layout_width="@dimen/icon_image_size"
            android:layout_height="@dimen/icon_image_size"
            android:layout_gravity="end"
            android:layout_marginTop="19dp"
            android:layout_marginBottom="18dp"
            android:src="@drawable/ic_share" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:paddingStart="@dimen/common_padding"
        android:paddingEnd="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="21dp"
            android:text="@string/write_to_support"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_text_size" />

        <ImageView
            android:layout_width="@dimen/icon_image_size"
            android:layout_height="@dimen/icon_image_size"
            android:layout_gravity="end"
            android:layout_marginTop="19dp"
            android:layout_marginBottom="18dp"
            android:src="@drawable/ic_support" />


    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:paddingStart="@dimen/common_padding"
        android:paddingEnd="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="21dp"
            android:text="@string/user_agreement"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_text_size" />

        <ImageView
            android:layout_width="@dimen/icon_image_size"
            android:layout_height="@dimen/icon_image_size"
            android:layout_gravity="end"
            android:layout_marginTop="19dp"
            android:layout_marginBottom="18dp"
            android:src="@drawable/ic_agreement" />

    </FrameLayout>


</LinearLayout>