<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="4dp"
        android:paddingStart="4dp">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:text="@string/search_btn"
            android:textColor="@color/header_text"
            android:textSize="@dimen/main_text_size" />


    </LinearLayout>

    <LinearLayout
        android:background="@drawable/search_background"
        style="@style/SettingsFrameStyle"
        android:layout_marginHorizontal="@dimen/common_padding"
        android:layout_marginTop="8dp">

        <ImageView
            android:layout_width="@dimen/icon_image_size"
            android:layout_height="@dimen/icon_image_size"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_search"
            app:tint="@color/search_icon_color"
            android:background="@null"

            />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/search_background">

            <EditText
                android:id="@+id/input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_btn"
                android:textColor="@color/search_text_color"
                android:textColorHint="@color/search_icon_color"
                android:background="@null"
                android:paddingVertical="8dp"
                android:layout_marginStart="4dp"
                android:inputType="text"
                android:maxLines="3"
                android:maxLength="50"
                android:layout_weight="1"
                android:imeOptions="actionDone"
                android:singleLine="true"
                />

            <ImageView
                android:id="@+id/clear_btn"
                android:layout_width="@dimen/icon_image_size"
                android:layout_height="@dimen/icon_image_size"
                android:layout_gravity="end|center"
                android:src="@drawable/ic_close"
                app:tint="@color/search_icon_color"
                android:background="@null"
                android:visibility="gone"
                />

        </FrameLayout>
    </LinearLayout>

<androidx.recyclerview.widget.RecyclerView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:id="@+id/track_recycler"
    />

    <LinearLayout
        android:id="@+id/error_placeholder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search_error_120"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/common_padding"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_text"
            style="@style/BadResponseTextStyle"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/update_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/refresh"
            android:layout_marginTop="@dimen/margin_24"
            android:textAllCaps="false"
            app:cornerRadius="54dp"
            android:textSize="14sp"
            android:fontFamily="@font/ys_display_medium"
            android:backgroundTint="@color/bad_response_text_color"
            />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/nothing_find_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:visibility="gone"
       >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_nothing_found_120"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/common_padding"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nothing_was_found"
            android:layout_gravity="center_horizontal"
            style="@style/BadResponseTextStyle"/>


    </LinearLayout>

</LinearLayout>