<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.media.activity.NewPlaylistFragment">

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/new_playlist_tv"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center_vertical"
        android:paddingStart="12dp"
        android:text="@string/edit_playlist"
        android:textColor="@color/header_text"
        android:textSize="@dimen/main_text_size"
        app:layout_constraintBottom_toBottomOf="@id/back_btn"
        app:layout_constraintStart_toEndOf="@id/back_btn"
        app:layout_constraintTop_toTopOf="@id/back_btn" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/playlist_img"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/dotted_line"
        android:scaleType="center"
        android:src="@drawable/new_playlist_ic_100"
        app:layout_constraintBottom_toTopOf="@id/guideline_middle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_playlist_tv"
        app:layout_constraintVertical_bias="1.0"
        app:shapeAppearanceOverlay="@style/roundedImageView" />

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/playlist_name_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:textColorHint="@color/playlist_name"
        app:boxStrokeColor="@color/text_input_layout_selector"

        app:hintTextColor="@color/playlist_hint_when_clicked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playlist_img"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlist_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text"
            android:maxLines="1"

            android:paddingHorizontal="16dp"
            android:paddingTop="18dp"
            android:paddingBottom="19dp"
            android:textColor="@color/playlist_name"
            android:textColorHint="@color/playlist_description"


            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlist_description_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="17dp"
        android:textColorHint="@color/playlist_name"

        app:boxStrokeColor="@color/text_input_layout_selector"
        app:hintTextColor="@color/playlist_hint_when_clicked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playlist_name_layout"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlist_description_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/playlist_name"
            android:textColorHint="@color/playlist_description" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_playlist_btn"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginHorizontal="17dp"
        android:layout_marginBottom="32dp"
        android:alpha="1"
        android:background="@drawable/create_btn_selector"
        android:elevation="0dp"
        android:enabled="true"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:backgroundTint="@null"
        app:cornerRadius="8dp"
        app:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>